--- a/Homeworks/matrix.ipynb
+++ b/Homeworks/matrix.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,28 +147,21 @@
     "    assert A.num_of_cols == B.num_of_rows , \"Incompatible matrices\"\n",
     "\n",
     "    # find which dimension is the largest\n",
-    "\n",
     "    biggest = max(A.num_of_rows, A.num_of_cols, B.num_of_cols)\n",
     "\n",
+    "    # base case\n",
+    "    if(A.num_of_cols==A.num_of_rows and B.num_of_cols==B.num_of_rows) and (is_power_of_two(A.num_of_rows)):\n",
+    "        return strassen_matrix_mult(A,B)\n",
+    "\n",
     "    # padding of matrices if needed\n",
-    "    # basically I'm taking into account the following cases:\n",
-    "    ####### non-square matrix\n",
-    "    ####### non power of 2 number of columns\n",
-    "    ####### non power of 2 number of rows\n",
-    "    if ((A.num_of_cols != A.num_of_rows) or (not(is_power_of_two(A.num_of_cols))) or (not(is_power_of_two(A.num_of_rows)))):\n",
+    "    else:\n",
     "        A_padded = Matrix([[0 for y in range(next_power_of_two(biggest))] \n",
     "                            for x in range(next_power_of_two(biggest))], clone_matrix=False)\n",
     "        A_padded.assign_submatrix(0,0,A)\n",
-    "    else:\n",
-    "        A_padded = A\n",
-    "    \n",
-    "    if ((B.num_of_cols != B.num_of_rows) or (not(is_power_of_two(B.num_of_cols))) or (not(is_power_of_two(B.num_of_rows)))):\n",
     "\n",
     "        B_padded = Matrix([[0 for y in range(next_power_of_two(biggest))] \n",
     "                            for x in range(next_power_of_two(biggest))], clone_matrix=False)\n",
     "        B_padded.assign_submatrix(0,0,B)\n",
-    "    else:\n",
-    "        B_padded = B\n",
     "    \n",
     "    return strassen_matrix_mult(A_padded, B_padded).submatrix(0, A.num_of_rows, 0, B.num_of_cols)\n",
     "    "
@@ -185,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -313,8 +306,8 @@
   },
   {
    "source": [
-    "It's important to notice that for both methods, with padding we are not affecting asymptotic complexity since in the worst case we will enlarge the number of columns or rows up to $N$ which is $<2n$ (for the first method e.g $n=1025$ will become $N=2048$). So knowing that time complexity for Strassen algorithm is $O(n^{log_27})$ we can prove that this actually is left unchanged:\n",
-    "$$ O(N^{log_27}) < O(2n^{log_27}) = O(7n^{log_27}) \\in O(n^{log_27}) $$\n"
+    "It's important to notice that for both methods, with padding we are not affecting asymptotic complexity since in the worst case we will enlarge the number of columns or rows up to $N$ which is $<2n$ (for the first method e.g $n=1025$ will become $N=2048$). So knowing that time complexity for Strassen algorithm is $O(n^{log_{2}7})$ we can prove that this actually is left unchanged:\n",
+    "$$ O(N^{log_{2}7}) < O(2n^{log_{2}7}) = O(7n^{log_{2}7}) \\in O(n^{log_{2}7}) $$\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -554,7 +547,7 @@
     "\\end{aligned}$\n",
     "\n",
     "This is because at each iteration we need to allocate memory for the 10 partial sums (that follows $\\Theta(n^2)$ complexity) and for the 7 matrices in which we store the partial multiplications.\n",
-    "As we can notice the formulation is the same as the one for arithmetic complexity of Strassen's algorithm, so the final result is that the minimum axiliary space required is $O(n^{log_27})$.\n",
+    "As we can notice the formulation is the same as the one for arithmetic complexity of Strassen's algorithm, so the final result is that the minimum axiliary space required is $O(n^{log_{2}7})$.\n",
     "\n",
     "**Note**: The previous result is valid also for the optimized algorithm since we don't eliminate $P_i$ matrices that take advantage of the recursion."
    ],
