--- a/Homeworks/matrix.ipynb
+++ b/Homeworks/matrix.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,15 @@
    "metadata": {}
   },
   {
+   "source": [
+    "The implementation is pretty straightforward by following the original formulation that we saw during classes:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,24 +129,36 @@
    "metadata": {}
   },
   {
+   "source": [
+    "Padding with zeros the matrix given as input if this one is not square or has as number of rows or column a number which is not equal to $2^n$ makes us able to recall and use the trivial Strassen algorithm implementation. The resulting matrix will be a $N \\times N$ matrix where $N$ will be the nearest power of two of the biggest size among rows and columns."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Some auxiliary functions that I've used in the implementation of the following methods\n",
+    "\n",
+    "# Find the next power of 2 of a given number n\n",
     "def next_power_of_two(n):\n",
     "    return int(math.pow(2, math.ceil(math.log(n)/math.log(2))))\n",
     "\n",
+    "# Check if number n is a power of 2\n",
     "def is_power_of_two(n):\n",
     "    return ((n & (n-1) == 0) and n != 0)\n",
     "\n",
+    "# Check if number n is even\n",
     "def is_even(n):\n",
     "    return (n%2 == 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,8 +188,6 @@
   },
   {
    "source": [
-    "Padding with zeros the matrix given as input if this one is not square or has as number of rows or column a number which is not equal to $2^n$ makes us able to recall and use the trivial Strassen algorithm implementation. The resulting matrix will be a $N \\times N$ matrix where $N$ will be the nearest power of two of the biggest size among rows and columns.\n",
-    "\n",
     "Another approach consists in adding just a row or a column if the total amount is equal to an odd number, this could also lead to a smaller overhead w.r.t previous method since we don't have to allocate such bigger matrix than the original ones. Here below the implementation:\n"
    ],
    "cell_type": "markdown",
@@ -178,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,17 +272,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The difference between the two matrices using next power of 2 method is = 0\n",
-      "The difference between the two matrices using next even number method is = 0\n",
-      "The difference between the two matrices using next power of 2 method is = 0\n",
-      "The difference between the two matrices using next even number method is = 0\n",
       "The difference between the two matrices using next power of 2 method is = 0\n",
       "The difference between the two matrices using next even number method is = 0\n",
       "The difference between the two matrices using next power of 2 method is = 0\n",
@@ -284,8 +297,8 @@
     "m=[37,61,42,35,73,212,315]\n",
     "\n",
     "for i,j in zip(n,m):\n",
-    "    A = Matrix([[math.floor(random()*10) for k in range(j)]for l in range(i)])\n",
-    "    B = Matrix([[math.floor(random()*10) for k in range(i)]for l in range(j)])\n",
+    "    A = Matrix([[random() for k in range(j)]for l in range(i)])\n",
+    "    B = Matrix([[random() for k in range(i)]for l in range(j)])\n",
     "\n",
     "    C = gauss_matrix_mult(A,B)\n",
     "    D = generalized_even_strassen_matrix_mult(A,B)\n",
@@ -356,7 +369,7 @@
   },
   {
    "source": [
-    "Results show that the latter method is strongly affected by the instantiation of a much larger matrix w.r.t the original one, so even if the complexity is the same it is not convenient to use that. On the other hand we can observe that the generalized method using padding to the next even number is very efficient and can lead to strong benefits."
+    "Results show that the latter method is strongly affected by the instantiation of a much larger matrix w.r.t the original one, so even if the complexity is the same it is not convenient to use this kind of approach. On the other hand we can observe that the generalized method using padding to the next even number is very efficient and can lead to strong benefits."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -370,16 +383,15 @@
   },
   {
    "source": [
-    "The idea I followed in order to reduce the number of auxiliary matrices was to store within the original matrices $A$ and $B$ the partial sums $S_i$ (for $i = 1,...,10$), using also the final matrix C which is initialized as empty. \n",
-    "I decided to leave the $P_i$ matrices since it would be too much inconvenient for what concerns computational timings to recompute each matrix $P_i$ for each one of the final quadrant $C_{ij}$. Moreover, regarding the final quadrants, we can avoid to compute the summations and differences while initializing 4 new matrices and pass them directly as function arguments.\n",
-    "I would like to point out that this solution actualy loses the memory advantages by using the function submatrix in the definition of all $P_i$ matrices since submatrix() creates a copy.\n"
+    "The idea I followed in order to reduce the number of auxiliary matrices was to store within the original final matrix $C$ the matrices given as result of the partials multiplications. Moreover to enhance memory usage efficiency I opted, instead of assigning to each one of the matrices $P_i$ a different space in memory, to compute them in the same matrix M.\n",
+    "To do so I also used an additional method *add_submatrix* which can be found directly matrix.py file."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,91 +409,85 @@
     "    result_matrix = Matrix([[0 for x in range(B.num_of_cols)] for y in range(A.num_of_rows)],\n",
     "                            clone_matrix=False)\n",
     "\n",
-    "    # In order to reuse same memory space we allocate \n",
-    "    # the matrices within the original ones\n",
-    "    B.assign_submatrix(0,0,B12 - B22)\n",
-    "    A.assign_submatrix(0,0,A11 + A12)\n",
-    "    A.assign_submatrix(0,A.num_of_cols//2,A21 + A22)\n",
-    "    B.assign_submatrix(0,B.num_of_cols//2,B21 - B11)\n",
-    "    A.assign_submatrix(A.num_of_rows//2,0,A11 + A22)\n",
-    "    B.assign_submatrix(B.num_of_rows//2,0,B11 + B22)\n",
-    "    A.assign_submatrix(A.num_of_rows//2,A.num_of_cols//2,A12 - A22) \n",
-    "    B.assign_submatrix(B.num_of_rows//2,B.num_of_cols//2,B21 + B22)\n",
-    "    result_matrix.assign_submatrix(0,0,A11 - A21)\n",
-    "    result_matrix.assign_submatrix(0,result_matrix.num_of_cols//2,B11 + B12) \n",
-    "\n",
-    "    # Recursive calls\n",
-    "    P1 = strassen_matrix_mult(A11, B.submatrix(0, B.num_of_rows//2, 0, B.num_of_cols//2))\n",
-    "    P2 = strassen_matrix_mult(A.submatrix(0, A.num_of_rows//2, 0, A.num_of_cols//2), B22)\n",
-    "    P3 = strassen_matrix_mult(A.submatrix(0, A.num_of_rows//2, A.num_of_cols//2, A.num_of_cols//2), B11)\n",
-    "    P4 = strassen_matrix_mult(A22, B.submatrix(0, B.num_of_rows//2, B.num_of_cols//2, B.num_of_cols//2))\n",
-    "    P5 = strassen_matrix_mult(A.submatrix(A.num_of_rows//2, A.num_of_rows//2, 0, A.num_of_cols//2), \n",
-    "                              B.submatrix(B.num_of_rows//2, B.num_of_rows//2, 0, B.num_of_cols//2))\n",
-    "    P6 = strassen_matrix_mult(A.submatrix(A.num_of_rows//2, A.num_of_rows//2, A.num_of_cols//2, A.num_of_cols//2), \n",
-    "                              B.submatrix(B.num_of_rows//2, B.num_of_rows//2, B.num_of_cols//2, B.num_of_cols//2))\n",
-    "    P7 = strassen_matrix_mult(result_matrix.submatrix(0, result_matrix.num_of_rows//2, 0, result_matrix.num_of_cols//2), \n",
-    "                              result_matrix.submatrix(0, result_matrix.num_of_rows//2, result_matrix.num_of_cols//2,                                            result_matrix.num_of_cols//2))\n",
+    "    # Recursive calls and putting already in the correct position of the result matrix \n",
+    "    # the matrix obtained by the multiplication\n",
     "    \n",
-    "    # Copying Cij into the resulting matrix\n",
-    "    result_matrix.assign_submatrix(0, 0, P5 + P4 - P2 + P6)\n",
-    "    result_matrix.assign_submatrix(0, result_matrix.num_of_cols//2, P1 + P2)\n",
-    "    result_matrix.assign_submatrix(result_matrix.num_of_rows//2, 0, P3 + P4)\n",
-    "    result_matrix.assign_submatrix(result_matrix.num_of_rows//2, result_matrix.num_of_cols//2, P5 + P1 - P3 - P7)\n",
+    "    M = strassen_matrix_mult(A11, B12 - B22)\n",
+    "    result_matrix.add_submatrix(0, result_matrix.num_of_cols//2,M)\n",
+    "    result_matrix.add_submatrix(result_matrix.num_of_rows//2, result_matrix.num_of_cols//2,M)\n",
+    "\n",
+    "    M = strassen_matrix_mult(A11 + A12, B22)\n",
+    "    result_matrix.add_submatrix(0, 0, -1*M)\n",
+    "    result_matrix.add_submatrix(0, result_matrix.num_of_cols//2, M)\n",
+    "\n",
+    "    M = strassen_matrix_mult(A21 + A22, B11)\n",
+    "    result_matrix.add_submatrix(result_matrix.num_of_rows//2, 0, M)\n",
+    "    result_matrix.add_submatrix(result_matrix.num_of_rows//2, result_matrix.num_of_cols//2, -1*M)\n",
+    "\n",
+    "    M = strassen_matrix_mult(A22, B21 - B11)\n",
+    "    result_matrix.add_submatrix(0, 0, M)\n",
+    "    result_matrix.add_submatrix(result_matrix.num_of_rows//2, 0, M)\n",
+    "\n",
+    "    M = strassen_matrix_mult(A11 + A22,  B11 + B22)\n",
+    "    result_matrix.add_submatrix(0, 0, M)\n",
+    "    result_matrix.add_submatrix(result_matrix.num_of_rows//2, result_matrix.num_of_cols//2, M)\n",
+    "\n",
+    "    M = strassen_matrix_mult(A12 - A22, B21 + B22)\n",
+    "    result_matrix.add_submatrix(0, 0, M)\n",
+    "\n",
+    "\n",
+    "    M = strassen_matrix_mult(A11 - A21,  B11 + B12)\n",
+    "    result_matrix.add_submatrix(result_matrix.num_of_rows//2, result_matrix.num_of_cols//2, -1*M)\n",
     "    \n",
     "    return result_matrix\n"
    ]
   },
   {
    "source": [
-    "In the code below I tried to implement the same thing as above but without putting in the already existent matrices the result of the summations.\n"
+    "Here the some testings in order to check result's correctness and effects on execution time:"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def opt2_strassen_matrix_mult(A: Matrix, B: Matrix) -> Matrix:\n",
-    "\n",
-    "    # Base case\n",
-    "    if max(A.num_of_rows, B.num_of_cols, A.num_of_cols) < 32:\n",
-    "        return gauss_matrix_mult(A, B)\n",
-    "    \n",
-    "    # Recursive step\n",
-    "    A11, A12, A21, A22 = get_matrix_quadrants(A)\n",
-    "    B11, B12, B21, B22 = get_matrix_quadrants(B)\n",
-    "\n",
-    "    # Recursive calls\n",
-    "    P1 = strassen_matrix_mult(A11, B12 - B22)\n",
-    "    P2 = strassen_matrix_mult(A11 + A12, B22)\n",
-    "    P3 = strassen_matrix_mult(A21 + A22, B11)\n",
-    "    P4 = strassen_matrix_mult(A22, B21 - B11)\n",
-    "    P5 = strassen_matrix_mult(A11 + A22, B11 + B22)\n",
-    "    P6 = strassen_matrix_mult(A12 - A22 , B21 + B22)\n",
-    "    P7 = strassen_matrix_mult(A11 - A21, B11 + B12)\n",
-    "\n",
-    "    # Build resulting matrix\n",
-    "    result_matrix = Matrix([[0 for x in range(B.num_of_cols)] for y in range(A.num_of_rows)],\n",
-    "                            clone_matrix=False)\n",
-    "    \n",
-    "    # Copying Cij into the resulting matrix\n",
-    "    result_matrix.assign_submatrix(0, 0, P5 + P4 - P2 + P6)\n",
-    "    result_matrix.assign_submatrix(0, result_matrix.num_of_cols//2, P1 + P2)\n",
-    "    result_matrix.assign_submatrix(result_matrix.num_of_rows//2, 0, P3 + P4)\n",
-    "    result_matrix.assign_submatrix(result_matrix.num_of_rows//2, result_matrix.num_of_cols//2, P5 + P1 - P3 - P7)\n",
-    "    \n",
-    "    return result_matrix\n"
-   ]
-  },
-  {
-   "source": [
-    "Here the testings in order to check the effects on execution time:"
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The difference between the two matrices using optimized method is = 0\n",
+      "The difference between the two matrices using optimized method is = 0.0\n",
+      "The difference between the two matrices using optimized method is = 0.0\n",
+      "The difference between the two matrices using optimized method is = 0.0\n",
+      "The difference between the two matrices using optimized method is = 0.0\n",
+      "The difference between the two matrices using optimized method is = 3.552713678800501e-15\n",
+      "The difference between the two matrices using optimized method is = 1.1901590823981678e-13\n",
+      "The difference between the two matrices using optimized method is = -1.4566126083082054e-13\n",
+      "The difference between the two matrices using optimized method is = -5.044853423896711e-13\n"
+     ]
+    }
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "source": [
+    "for i in range(9):\n",
+    "    size = 2**i\n",
+    "    A = Matrix([[random() for k in range(size)]for l in range(size)])\n",
+    "    B = Matrix([[random() for k in range(size)]for l in range(size)])\n",
+    "\n",
+    "    C = gauss_matrix_mult(A,B)\n",
+    "    D = opt_strassen_matrix_mult(A,B)\n",
+    "    diff = C-D\n",
+    "    sum = 0\n",
+    "    for x in range(i):\n",
+    "        for y in range(i):\n",
+    "            sum = sum + diff[x][y]\n",
+    "\n",
+    "    print(f'The difference between the two matrices using optimized method is = {sum}')"
+   ]
   },
   {
    "cell_type": "code",
@@ -492,17 +498,17 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1\t0.000\t0.000\t0.000\t0.000\n",
-      "2\t0.000\t0.000\t0.000\t0.000\n",
-      "4\t0.000\t0.000\t0.000\t0.000\n",
-      "8\t0.000\t0.001\t0.001\t0.001\n",
-      "16\t0.003\t0.003\t0.004\t0.004\n",
-      "32\t0.025\t0.025\t0.022\t0.018\n",
-      "64\t0.152\t0.119\t0.106\t0.112\n",
-      "128\t0.766\t0.731\t0.779\t0.746\n",
-      "256\t5.949\t5.264\t5.224\t5.250\n",
-      "512\t47.174\t36.379\t36.206\t36.630\n",
-      "1024\t385.911\t256.303\t255.604\t255.094\n"
+      "1\t0.000\t0.000\t0.000\n",
+      "2\t0.000\t0.000\t0.000\n",
+      "4\t0.000\t0.000\t0.000\n",
+      "8\t0.000\t0.000\t0.000\n",
+      "16\t0.003\t0.002\t0.002\n",
+      "32\t0.011\t0.016\t0.014\n",
+      "64\t0.096\t0.106\t0.123\n",
+      "128\t0.766\t0.743\t0.723\n",
+      "256\t6.089\t5.409\t5.429\n",
+      "512\t54.996\t43.639\t42.039\n",
+      "1024\t515.849\t277.411\t275.665\n"
      ]
     }
    ],
@@ -515,7 +521,7 @@
     "    A = Matrix([[random() for x in range(size)] for y in range(size)])\n",
     "    B = Matrix([[random() for x in range(size)] for y in range(size)])\n",
     "\n",
-    "    for funct in ['gauss_matrix_mult','strassen_matrix_mult','opt_strassen_matrix_mult','opt2_strassen_matrix_mult']:\n",
+    "    for funct in ['gauss_matrix_mult','strassen_matrix_mult','opt_strassen_matrix_mult']:\n",
     "        T = timeit(f'{funct}(A,B)', globals=locals(), number=1)\n",
     "        stdout.write('\\t{:.3f}'.format(T))\n",
     "        stdout.flush()\n",
@@ -524,7 +530,7 @@
   },
   {
    "source": [
-    "We can se that actually the first optimization method is the best among all the methods, but only slightly if we consider the Strassen approach."
+    "We can see that with this approach the algorithm actually performs better expecially for larger sizes of the matrix."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -549,7 +555,14 @@
     "This is because at each iteration we need to allocate memory for the 10 partial sums (that follows $\\Theta(n^2)$ complexity) and for the 7 matrices in which we store the partial multiplications.\n",
     "As we can notice the formulation is the same as the one for arithmetic complexity of Strassen's algorithm, so the final result is that the minimum axiliary space required is $O(n^{log_{2}7})$.\n",
     "\n",
-    "**Note**: The previous result is valid also for the optimized algorithm since we don't eliminate $P_i$ matrices that take advantage of the recursion."
+    "The previous result is not valid for the optimized algorithm; since we eliminate instantianion of $P_i$ matrices and use only one of matrix $M$ we'll have:\n",
+    "\n",
+    "$\\begin{aligned}\n",
+    "M(n) &= M(\\frac{n}{2})+ \\Theta(n^2), \\space n>1 \\\\\n",
+    "M(n) &= 1, \\space n = 1\n",
+    "\\end{aligned}$\n",
+    "\n",
+    "Following the computations $M(n) = M(n/2) + n^2 = M(n/4) + (n/2)^2 + n^2 = \\space ... \\space = n^2(1+\\frac{1}{4}+\\frac{1}{4^2}+...+\\frac{1}{4^{log_{2}n}}) <= 2n^2$, so we have that the complexity is $O(n^2)$."
    ],
    "cell_type": "markdown",
    "metadata": {}
