--- a/Homeworks/matrix.ipynb
+++ b/Homeworks/matrix.ipynb
@@ -35,6 +35,13 @@
    "metadata": {}
   },
   {
+   "source": [
+    "In the following functions I used the class Matrix, which we've implemented during lessons and it can be found within the **matrix.py** file."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -130,7 +137,9 @@
   },
   {
    "source": [
-    "Padding with zeros the matrix given as input if this one is not square or has as number of rows or column a number which is not equal to $2^n$ makes us able to recall and use the trivial Strassen algorithm implementation. The resulting matrix will be a $N \\times N$ matrix where $N$ will be the nearest power of two of the biggest size among rows and columns."
+    "We know that Strassen's algorithm can work only with square matrices in which the size of the columns or row is equal to $2^n$. \n",
+    "A more general formulation of this algorithm can be achieved thanks to a technique called Padding.\n",
+    "In fact, padding with zeros the matrix given as input if this one is not square or has as number of rows or column a number which is not equal to $2^n$ makes us able to recall and use the trivial Strassen algorithm implementation after having padded those matrices to a $N \\times N$ matrix, where $N$ will be the nearest power of two of the biggest size among rows and columns."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -141,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Some auxiliary functions that I've used in the implementation of the following methods\n",
+    "# Some auxiliary functions used in the implementation of the following methods\n",
     "\n",
     "# Find the next power of 2 of a given number n\n",
     "def next_power_of_two(n):\n",
@@ -188,7 +197,7 @@
   },
   {
    "source": [
-    "Another approach consists in adding just a row or a column if the total amount is equal to an odd number, this could also lead to a smaller overhead w.r.t previous method since we don't have to allocate such bigger matrix than the original ones. Here below the implementation:\n"
+    "Another approach consists in adding just a row or a column if the number of those is equal to an odd number. This could also lead to a smaller overhead w.r.t previous method since we don't have to allocate such bigger matrix than the original ones. Here below the implementation:\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
