--- a/Homeworks/matrix.ipynb
+++ b/Homeworks/matrix.ipynb
@@ -571,7 +571,7 @@
     "M(n) &= 1, \\space n = 1\n",
     "\\end{aligned}$\n",
     "\n",
-    "Following the computations $M(n) = M(n/2) + n^2 = M(n/4) + (n/2)^2 + n^2 = \\space ... \\space = n^2(1+\\frac{1}{4}+\\frac{1}{4^2}+...+\\frac{1}{4^{log_{2}n}}) <= 2n^2$, so we have that the complexity is $O(n^2)$."
+    "Following the computations $M(n) = M(n/2) + n^2 = M(n/4) + (n/2)^2 + n^2 = \\space ... \\space = n^2(1+\\frac{1}{4}+\\frac{1}{4^2}+...+\\frac{1}{4^{log_{2}n}}) <= cn^2$, so we have that the complexity is $O(n^2)$."
    ],
    "cell_type": "markdown",
    "metadata": {}
