--- a/Homeworks/HW3/homework_batch_III_DB.ipynb
+++ b/Homeworks/HW3/homework_batch_III_DB.ipynb
@@ -47,201 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import inf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Node:\n",
-    "\n",
-    "    def __init__(self, index, heap_idx, dist, pred):\n",
-    "        self.index = index\n",
-    "        self.heap_index = heap_idx\n",
-    "        self.d = dist\n",
-    "        self.pred = pred\n",
-    "    \n",
-    "    def print_node(self):\n",
-    "        print(f\"index: {self.index}, data: {self.d}, predecessor: {self.pred}\")\n",
-    "\n",
-    "class Edge:\n",
-    "    \n",
-    "    def __init__(self, src, dest, weight=1):\n",
-    "        self.u = src\n",
-    "        self.v = dest\n",
-    "        self.weight = weight\n",
-    "\n",
-    "class Weighted_Graph:\n",
-    "\n",
-    "    def __init__(self, vertices, edges):\n",
-    "        self.V = [vertix for vertix in vertices]\n",
-    "        self.Adj = [[] for vertix in range(len(vertices))]\n",
-    "\n",
-    "        for edge in edges:\n",
-    "            self.Adj[edge.u.index].append((edge.v,edge.weight))\n",
-    "    \n",
-    "    def print_adj(self):\n",
-    "        for el in G.V:\n",
-    "            print(el.index)\n",
-    "            for j in el:\n",
-    "                print(f\"\\t ->{j[0].index}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import TypeVar, Generic, Union, List\n",
-    "\n",
-    "from numbers import Number\n",
-    "\n",
-    "T = TypeVar('T')\n",
-    "\n",
-    "def min_order(a: Number, b: Number) -> bool:\n",
-    "    return a <= b\n",
-    "\n",
-    "def max_order(a: Number, b: Number) -> bool:\n",
-    "    return a >= b\n",
-    "\n",
-    "class binheap(Generic[T]):\n",
-    "\n",
-    "    def __init__(self, A: Union[int, List[T]], total_order = None):\n",
-    "\n",
-    "        if total_order is None:\n",
-    "            self._torder = min_order\n",
-    "        else:\n",
-    "            self._torder = max_order\n",
-    "\n",
-    "        if isinstance(A, int):\n",
-    "            self._size = 0\n",
-    "            self._A = [None]*A\n",
-    "        else:\n",
-    "            self._size = len(A)\n",
-    "            self._A = A\n",
-    "        \n",
-    "        self._build_heap()\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def parent(node: int) -> Union[int, None]:\n",
-    "        if node == 0:\n",
-    "            return None\n",
-    "\n",
-    "        return (node-1)//2\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def child(node: int, side: int) -> int:\n",
-    "        return 2*node + 1 + side\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def left(node: int) -> int:\n",
-    "        return 2*node + 1\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def right(node: int) -> int:\n",
-    "        return 2*node + 2\n",
-    "    \n",
-    "    def is_empty(self) -> bool:\n",
-    "        return self._size == 0\n",
-    " \n",
-    "    def __len__(self):\n",
-    "        return self._size\n",
-    "\n",
-    "    def _swap_keys(self, node_a: int, node_b: int) -> None:\n",
-    "        tmp = self._A[node_a]\n",
-    "        self._A[node_a] = self._A[node_b]\n",
-    "        self._A[node_b] = tmp\n",
-    "\n",
-    "        tmp = self._A[node_a].heap_index\n",
-    "        self._A[node_a].heap_index = self._A[node_b].heap_index\n",
-    "        self._A[node_b].heap_index = tmp\n",
-    "\n",
-    "    # iterative version\n",
-    "    def _heapify(self, node: int) -> None:\n",
-    "        keep_fixing = True\n",
-    "\n",
-    "        while keep_fixing:\n",
-    "            min_node = node\n",
-    "            for child_idx in [2*node + 1, 2*node + 2]:\n",
-    "                if child_idx < self._size and self._torder(self._A[child_idx].d, self._A[min_node].d):\n",
-    "                    min_node = child_idx\n",
-    "\n",
-    "            # min_node is the index of the minimum key \n",
-    "            # among the keys of root and its children\n",
-    "\n",
-    "            if min_node != node:\n",
-    "                self._swap_keys(min_node, node)\n",
-    "                node = min_node\n",
-    "            else:\n",
-    "                keep_fixing = False\n",
-    "\n",
-    "    def remove_minimum(self) -> T:\n",
-    "        if self.is_empty():\n",
-    "            raise RuntimeError('The heap is empty')\n",
-    "\n",
-    "        self._swap_keys(0, self._size-1)\n",
-    "\n",
-    "        self._size = self._size-1\n",
-    "\n",
-    "        self._heapify(0)\n",
-    "\n",
-    "        return self._A[self._size]\n",
-    "\n",
-    "    def _build_heap(self) -> None:\n",
-    "        for i in range(binheap.parent(self._size-1), -1, -1):\n",
-    "            self._heapify(i)\n",
-    "    \n",
-    "    def decrease_key(self, node: int, new_value: T) -> None:\n",
-    "        self._A[node].d = new_value\n",
-    "\n",
-    "        parent = binheap.parent(node)\n",
-    "\n",
-    "        while node != 0 and not self._torder(self._A[parent].d, self._A[node].d):\n",
-    "            self._swap_keys(node, parent)\n",
-    "            node = parent\n",
-    "            parent = binheap.parent(node)\n",
-    "\n",
-    "    def insert(self, value: T) -> None:\n",
-    "        if self._size >= len(self._A):\n",
-    "            raise RuntimeError('The heap is full')\n",
-    "            \n",
-    "        if self.is_empty():\n",
-    "            self._A[0] = value\n",
-    "            self._size += 1\n",
-    "        else:\n",
-    "            parent = binheap.parent(self._size)\n",
-    "            if self._torder(self._A[parent], value):\n",
-    "                self._A[self._size] = value\n",
-    "            else:\n",
-    "                self._A[self._size] = self._A[parent]\n",
-    "                \n",
-    "            self._size += 1\n",
-    "            self.decrease_key(self._size - 1, value)\n",
-    "\n",
-    "    # nice print \n",
-    "    def __repr__(self) ->str:\n",
-    "        br_str = ''\n",
-    "\n",
-    "        # pseudocode indexes\n",
-    "        next_node = 1\n",
-    "        up_to = 2\n",
-    "\n",
-    "        while next_node <= self._size:\n",
-    "            level = '\\t'.join(f'{v.index},{v.d},{v.pred},{v.heap_index}' for v in self._A[next_node-1: min(up_to-1, self._size)])\n",
-    "\n",
-    "            if next_node == 1:\n",
-    "                bh_str = level\n",
-    "            else:\n",
-    "                bh_str += f'\\n{level}'\n",
-    "\n",
-    "            next_node = up_to\n",
-    "            up_to = 2*up_to\n",
-    "\n",
-    "        return bh_str\n"
+    "from math import inf\n",
+    "from graph import *\n",
+    "from node_binheap import binheap"
    ]
   },
   {
@@ -312,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
