--- a/Homeworks/HW3/homework_batch_III_DB.ipynb
+++ b/Homeworks/HW3/homework_batch_III_DB.ipynb
@@ -36,7 +36,9 @@
   },
   {
    "source": [
-    "1. Implement the binary heap-based version of the Dijkstra's algorithm."
+    "### Exercise 1\n",
+    "\n",
+    "Implement the binary heap-based version of the Dijkstra's algorithm."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -45,7 +47,7 @@
    "source": [
     "First of all I've done some slight modifications on the binheap class that we've implemented during lesson in order to properly deal with nodes. These can be found in the file **node_binheap.py** present in this repository; basically since we are considering distances in order to build the heap, all the comparison steps were done with respect to distances and not node's index. Further insights can be found as comments in the very same file.\n",
     "\n",
-    "Also classes such as `Node`, `Edge` and `Weighted_Graph` have been implemented, within **graph.py**.Also in this case I recall comments present in the aforementioned file, in order to grasp all the properties and characteristics of each object.\n",
+    "Also classes such as `Node`, `Edge` and `Weighted_Graph` have been implemented, within **graph.py**. Also in this case I recall comments present in the aforementioned file, in order to grasp all the properties and characteristics of each object.\n",
     "\n",
     "Finally here below the implementation for Dijkstra's algorithm using bin-heaps as priority queues:"
    ],
@@ -157,7 +159,9 @@
   },
   {
    "source": [
-    "2. Consider the contraction hierarchies presented during the course. Assume to deal with graphs that can be fully represented in the memory of your computer. Implement:\n",
+    "### Exercise 2\n",
+    "\n",
+    "Consider the contraction hierarchies presented during the course. Assume to deal with graphs that can be fully represented in the memory of your computer. Implement:\n",
     "\n",
     "(a) an algorithm to add the shortcuts to a graph;\n",
     "\n",
@@ -291,7 +295,7 @@
   },
   {
    "source": [
-    "hierarchyThe proper bidirectional algorithm is based on the following ideas:\n",
+    "Dijkstra bidirectional algorithm is based on the following ideas:\n",
     "* Start simultaneously Dijkstra algorithm from source and target node respectively in forward and backward graph;\n",
     "* when the two executions finalize at the same time the same node or when the finalized node of one execution has been already processed in the other one then both executions are stopped and forward and backward path are retrieved (using `get_predecessor` function);\n",
     "* if shortcuts have been added then, before relaxing an edge, we need to check if destination is leading to a node with higher importance in the hierarchy w.r.t. the source one (only in this way we can exploit the advantage of contraction hierarchies and shortcuts).\n"
