--- a/Homeworks/HW3/homework_batch_III_DB.ipynb
+++ b/Homeworks/HW3/homework_batch_III_DB.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,14 +406,14 @@
     "\n",
     "        for (k,w) in F_G.Adj[u.index]:\n",
     "            if shortcuts is True:\n",
-    "                if u.index <= k.index:\n",
+    "                if u.importance <= k.importance:\n",
     "                    relax(f_Q, u, k, w)\n",
     "            else:\n",
     "                relax(f_Q, u, k, w)\n",
     "            \n",
     "        for (k,w) in B_G.Adj[v.index]:\n",
     "            if shortcuts is True:\n",
-    "                if v.index <= k.index:\n",
+    "                if v.importance <= k.importance:\n",
     "                    relax(b_Q, v, k, w)\n",
     "            else:\n",
     "                relax(b_Q, v, k, w)\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,14 +448,14 @@
   },
   {
    "source": [
-    "Let's test it first on a graph without any kind of shortcuts. I've taken nodes' indices as importance metric, and this will be valid for all the next examples too."
+    "Let's test it first on a graph without any kind of shortcuts."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -533,14 +533,14 @@
     }
    ],
    "source": [
-    "a = Node(0,None,None,None)\n",
-    "b = Node(1,None,None,None)\n",
-    "c = Node(2,None,None,None)\n",
-    "d = Node(3,None,None,None)\n",
-    "e = Node(4,None,None,None)\n",
-    "f = Node(5,None,None,None)\n",
-    "g = Node(6,None,None,None)\n",
-    "h = Node(7,None,None,None)\n",
+    "a = Node(0,None,None,None,imp=1)\n",
+    "b = Node(1,None,None,None,imp=2)\n",
+    "c = Node(2,None,None,None,imp=3)\n",
+    "d = Node(3,None,None,None,imp=4)\n",
+    "e = Node(4,None,None,None,imp=5)\n",
+    "f = Node(5,None,None,None,imp=6)\n",
+    "g = Node(6,None,None,None,imp=7)\n",
+    "h = Node(7,None,None,None,imp=8)\n",
     "\n",
     "vertices = [a,b,c,d,e,f,g,h]\n",
     "edges = [Edge(b,c,2), Edge(c,b,1), Edge(c,d,3), Edge(a,e,1), Edge(e,a,3), Edge(h,a,1), Edge(h,g,1), Edge(g,h,1), Edge(d,h,3), Edge(e,f,1), Edge(f,h,1), Edge(a,f,1)]\n",
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -668,14 +668,14 @@
     }
    ],
    "source": [
-    "a = Node(0,None,None,None)\n",
-    "b = Node(1,None,None,None)\n",
-    "c = Node(2,None,None,None)\n",
-    "d = Node(3,None,None,None)\n",
-    "e = Node(4,None,None,None)\n",
-    "f = Node(5,None,None,None)\n",
-    "g = Node(6,None,None,None)\n",
-    "h = Node(7,None,None,None)\n",
+    "a = Node(0,None,None,None,imp=1)\n",
+    "b = Node(1,None,None,None,imp=2)\n",
+    "c = Node(2,None,None,None,imp=3)\n",
+    "d = Node(3,None,None,None,imp=4)\n",
+    "e = Node(4,None,None,None,imp=5)\n",
+    "f = Node(5,None,None,None,imp=6)\n",
+    "g = Node(6,None,None,None,imp=7)\n",
+    "h = Node(7,None,None,None,imp=8)\n",
     "\n",
     "vertices = [a,b,c,d,e,f,g,h]\n",
     "edges = [Edge(b,c,2), Edge(c,b,1), Edge(c,d,3), Edge(a,e,1), Edge(e,a,3), Edge(h,a,1), Edge(h,g,1), Edge(g,h,1), Edge(d,h,3), Edge(e,f,1), Edge(f,h,1), Edge(a,f,1)]\n",
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
